--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="google-signin-client_id" content="940726012646-uesv36pb2rud8kj908oaj7ll5e5qee50.apps.googleusercontent.com">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://use.fontawesome.com/a9f400bcd0.js"></script>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.8&appId=617494655102277";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>    
+    <script src="https://apis.google.com/js/platform.js" async defer></script>    
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,6 +27,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="fb-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -29,6 +38,5 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
