added Facebook connector to sign-in

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.8&appId=617494655102277";
+      js.src = "//connect.facebook.net/it_IT/sdk.js#xfbml=1&version=v2.8&appId=617494655102277";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>    
     <script src="https://apis.google.com/js/platform.js" async defer></script>    
