--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <!--script src="../node_modules/tracking/build/tracking.js"></script-->
   </body>
 </html>
